--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "css": "^2.2.1",
     "decoder": "^1.1.6",
     "ejs": "^2.4.1",
+    "electron-prebuilt": "^1.2.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "fibers": "^1.0.13",
+    "fine-uploader": "^5.10.0",
     "flatiron": "^0.4.3",
     "fs": "^0.0.2",
     "http": "^0.0.0",
@@ -26,12 +29,14 @@
     "log4js": "^0.6.36",
     "morgan": "^1.7.0",
     "multer": "^1.1.0",
+    "multiparty": "^4.1.2",
     "mysql": "^2.10.2",
     "node-gyp": "^3.3.1",
     "node-phpcgi": "^0.3.5",
     "node-static": "^0.7.7",
     "php-cgi": "^0.2.0",
     "ping": "^0.1.10",
+    "promise": "^7.1.1",
     "raw-body": "^2.1.6",
     "readline": "^1.3.0",
     "rebuild": "^0.1.2",
@@ -39,6 +44,7 @@
     "request": "^2.72.0",
     "router": "^1.1.4",
     "serialport": "^2.1.0",
+    "serve-index": "^1.8.0",
     "session": "^0.1.0",
     "socket.io": "^1.4.5",
     "socket.io-router": "^0.3.0",
@@ -46,12 +52,13 @@
     "udp": "^1.0.0",
     "union": "^0.3.0",
     "util": "^0.10.3",
+    "window": "^1.0.0",
     "xml2js": "^0.4.16"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node elec_test.js"
   },
   "keywords": [],
   "author": "",
